repaired overflow on img tag when screen width > 768 px

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ main {
 .window {
 	position: relative;
 	margin: 40px 20px 40px 20px;
-	padding: 20px 25px;
 	background-color: rgba(255, 255, 255, 0.99);
 	border: 1px solid var(--soft-blue);
 	border-radius: 25px;
@@ -92,7 +91,7 @@ main {
 	font-size: 32px;
 }
 .content {
-	padding: 25px 0;
+	padding: 45px 25px;
 }
 .logo {
 	position: relative;
@@ -132,9 +131,10 @@ main {
 	cursor: pointer;
 	margin-bottom: 18px;
 	margin-top: 18px;
-	transition: font-weight 0.3s;
+	transition: font-weight 0.2s;
 }
 .question:hover {
+	color: #df5c34;
 	font-weight: 700;
 }
 
@@ -201,7 +201,7 @@ main {
 	.window {
 		display: flex;
 		align-items: stretch;
-		overflow: hidden;
+		
 	}
 	.window h1 {
 		text-align-last: left;
@@ -211,6 +211,7 @@ main {
 	}
 	.logo {
 		height: auto;
+		overflow: hidden;
 	}
 	.logo .img-main {
 		width: 450px;
